--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -82,6 +82,7 @@ body {
   margin: 0;
   min-height: 100dvh;
   line-height: 1;
+  overflow-x: hidden;
 }
 
 .sr-only {
